<resources>
    <string name="app_name">Stock App</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, repellat temporibus. Accusantium animi asperiores atque autem consectetur et, explicabo iusto libero, minima neque nobis reiciendis repellat, voluptas voluptatem voluptatibus voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda deleniti earum iure iusto modi necessitatibus nesciunt nulla sequi vel veniam! Cum deserunt dolores ex modi nisi omnis quaerat qui voluptatem.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_app_language">Change language</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="favourites">Favourites</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <string name="recently">Recently</string>
    <string name="settings">Settings</string>
    <string name="technology">Technology</string>
    <string name="most_actives">Most actives</string>
    <string name="day_gainers">Day gainers</string>
    <string name="day_losers">Day losers</string>
    <string name="search">Find company or ticker</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="web_site">Web-site</string>
    <string name="employees">Employees</string>
    <string name="about_the_company">About the company</string>
    <string name="you_don_t_have_any_favourite_items">You don\'t have any favourite items</string>
    <string name="network_error">Network error</string>
    <string name="chart">Chart</string>
    <string name="summary">Summary</string>
    <string name="time">24 hours</string>
    <string name="close">Close</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="now">Now</string>
    <string name="not_found">Not found</string>
    <string name="dark_mode">Night mode</string>
    <string name="undervalued">Undervalued</string>
    <string name="agressive">Aggressive</string>
    <string name="small">Small cap</string>
</resources>